# simple-image-model-server

./: .gitignore  LICENSE.txt  README.md
api/: Dockerfile  build_server.sh  pyproject.toml  run_server.sh
api/requirements/: requirements.in  requirements.txt
api/src/image_model_client/: upload_and_detect.py
api/src/image_model_server/: __about__.py  app.py  database.py  model.py
api/tests/: __init__.py
