[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-model-server"
dynamic = ["version"]
description = 'Runs a model on a server'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jeffrey Barahona", email = "test" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jeffrey Barahona/image-model-server#readme"
Issues = "https://github.com/Jeffrey Barahona/image-model-server/issues"
Source = "https://github.com/Jeffrey Barahona/image-model-server"

[tool.hatch.version]
path = "src/image_model_server/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/image_model_server tests}"

[tool.coverage.run]
source_pkgs = ["image_model_server", "tests"]
branch = true
parallel = true
omit = [
  "src/image_model_server/__about__.py",
]

[tool.coverage.paths]
image_model_server = ["src/image_model_server", "*/image-model-server/src/image_model_server"]
tests = ["tests", "*/image-model-server/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
